# FuE_Greifen

./: CMakeLists.txt  idle_handle_strat2.py  objects_3D.proto
Robot/: Base.py  Robot.py  base_strat2.py  camera_sub.py  camera_to_robot_transform.py  config.yaml  follow_handler.py  get_pose.py  greifer.py  grip_handler.py  grip_handler_45grad.py  grip_handler_strat2.py  gripper.py  idle_handler.py  idle_handler_strat2.py  move_handler.py  move_handler_strat2.py  object_waiting_handler.py  object_waiting_handler_45grad.py  object_waiting_handler_strat2.py  place_handler.py  pose.yaml  pose_config.xml  runtime_config.py  save_pos.py  test.py  test_move_to_strat2.py
Robot/tests/: test_save_pos.py
cameras/: Object3D.hpp  README.md  README_ARCHITECTURE.md  calibration.py  camera_reader_base.cpp  camera_reader_base.hpp  camera_robot.cpp  camera_robot.hpp  camera_robot_main.cpp  camera_static.cpp  camera_static.hpp  camera_static_main.cpp  color_estimation.hpp  config2.yml  config_cam_robot.yml  config_cam_static.yml  test.py  tracker.cpp  tracker.hpp  z_camera_reader.hpp.backup  z_camera_reader_main.cpp.backup
cameras/backup_code/: backup_cam_robot  camera_calibration.cpp  camera_robot_depth.hpp  z_camera_reader.cpp.backup
docs/: bildverarbeitung_dokumentation.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/boost_plugin_loader/lib/boost_plugin_loader/: boost_plugin_loader_example
ros2_ws/install/boost_plugin_loader/share/boost_plugin_loader/: package.bash  package.sh  package.zsh
ros2_ws/install/industrial_calibration/lib/industrial_calibration/: industrial_calibration_camera_intrinsic  industrial_calibration_kinematic_calibration  industrial_calibration_noise_qualification_2d
ros2_ws/install/industrial_calibration/share/industrial_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/industrial_calibration_ros/lib/industrial_calibration_ros/: 3d_data_collection_node.py  data_collection_node.py  image_trigger.py  industrial_calibration_ros_pnp_validation_node  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/: Calibration_results_final  Calibration_results_no1  Calibration_results_no2  cal_data.yaml  calibrate_static_cam.yaml  config.yaml  convert_poses.py  create_data_list.py  eye_in_hand_calibration.py  get_images.py  get_pose.py  pixel_to_robot_pose.py  poses.txt
ros2_ws/src/FESTE_KAMERA/: ERGEBNIS.txt  cal_static_cam.py  config.yaml  find_dict.py
ros2_ws/src/poses/: pose_001.txt  pose_001.yaml  pose_002.txt  pose_002.yaml  pose_003.txt  pose_003.yaml  pose_004.txt  pose_004.yaml  pose_005.txt  pose_005.yaml  pose_006.txt  pose_006.yaml  pose_007.txt  pose_007.yaml  pose_008.txt  pose_008.yaml  pose_009.txt  pose_009.yaml  pose_010.txt  pose_010.yaml  pose_011.txt  pose_011.yaml  pose_012.txt  pose_012.yaml  pose_013.txt  pose_013.yaml
zeroMQ/: msg_receiver.cpp  objects_3D.pb.cc  objects_3D.pb.h  objects_3D.proto  objects_3D_pb2.py
(+46 files in other folders)
